--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -36,7 +36,7 @@ img[src=""] {
 /*====== 建议body给稿子底色背景 ==============*/
 body,
 html,home {
-    // position: relative;
+    position: relative;
     // width: 100%;
     // height: 100%;
     // overflow-y:auto;
