--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -30,6 +30,8 @@ body,
 html,
 home {
   position: relative;
+  width: 100%;
+  height: 100%;
   background: #f5f5f5;
 }
 ::-webkit-input-placeholder {
