--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -37,8 +37,8 @@ img[src=""] {
 body,
 html,home {
     position: relative;
-    // width: 100%;
-    // height: 100%;
+    width: 100%;
+    height: 100%;
     // overflow-y:auto;
     background: #f5f5f5;
     // perspective: 500px;
